Fixes light box image not showing on modal

--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -25,6 +25,7 @@
 .modal__inner_wrap {
   position: relative;
   z-index: map-get($zHeights, "above");
+  width: 100%;
 
   img {
     width: 100%;
